# anydesk-crm

./: .gitignore  CMakeLists.txt  main.cc
controllers/: BotController.cc  BotController.h  BroadcastController.cc  BroadcastController.h  FunnelController.cc  FunnelController.h  LeadController.cc  LeadController.h  PageController.cc  PageController.h  StaffController.cc  StaffController.h  TagController.cc  TagController.h
db/: Database.cc  Database.h
services/: AssignmentService.cc  AssignmentService.h  BotService.cc  BotService.h  BroadcastService.cc  BroadcastService.h  DuplicateLeadService.cc  DuplicateLeadService.h  FunnelService.cc  FunnelService.h  LeadService.cc  LeadService.h  LeadTagService.cc  LeadTagService.h  RenderService.cc  RenderService.h  TelegramFileService.cc  TelegramFileService.h  TelegramService.cc  TelegramService.h
static/css/: app.css  broadcasts.css
static/js/: app.js  broadcasts.js  funnels.js  tags.js
tools/: schema_dump.cc
views/: app.html  login.html
